remove unnecessary `disableIllegalAccessWarning()`